package proto;

option java_outer_classname = "ProtoPlayer";

message MessageHeader {
  enum Type {
    COMMAND = 1;
    // TODO(cmihail): add more types
  }
}

message Command {
  enum Type {
    NONE = 1;
    SET_POSITION = 2;
    PREVIOUS = 3;
    NEXT = 4;
    BACKWARD = 5;
    FORWARD = 6;
    STOP = 7;
    PLAY = 8;
    PAUSE = 9;
    MUTE = 10;
    SET_VOLUME = 11;
    TOGGLE_FULL_SCREEN = 12;
    START_MOVIE = 13; // TODO(cmihail): only for dev, move it into another message
  }

  required Type type = 1;

  message Information {
    required string value = 1;
  }

  optional Information info = 2;
}
